--- a/latex/future_of_gpus.tex
+++ b/latex/future_of_gpus.tex
@@ -13,7 +13,7 @@
 \fi
 
 
-\chapter{On the Future of GPU Computing}
+\section{On the Future of GPU Computing}
 
 In 2006, NVidia released CUDA to the general public---a milestone representing the moment GPU computing reached the critical mass necessary for uptake into widespread and prolonged use. Since then attempts have been made to leverage the GPU for nearly ever field of scientific research. 
 
@@ -48,6 +48,7 @@ CUDA 5 introduced support for MPI directly from the GPU. But we are proponents f
 
 \section{OpenMP}
 The latest version of OpenMP (v4.0) introduces pragmas for offloading computation to accelerators. These pragmas will function similarly to pragmas from PGI, OpenACC, and the Intel MIC. 
+
 
 \ifstandalone
 \bibliographystyle{plain}
